Add Stripe package

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,9 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
 RECAPTCHA_SKIP_IP=
+
+STRIPE_KEY=
+STRIPE_SECRET=
+STRIPE_WEBHOOK_SECRET=
+CASHIER_CURRENCY=gbp
+CASHIER_CURRENCY_LOCALE=en_GB
