--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.5",
         "autoprefixer": "^10.4.2",
-        "axios": "^0.25",
-        "bootstrap": "^5.3.0-alpha3",
-        "laravel-vite-plugin": "^0.2.1",
+        "axios": "^1.6.1",
+        "bootstrap": "^5.3.2",
+        "laravel-vite-plugin": "^0.8.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "sass": "^1.53.0",
-        "vite": "^2.9.16"
+        "vite": "^4.0.0"
     }
 }
