--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "mews/purifier": "^3.4",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
