--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,17 @@
-APP_NAME="Training Manager"
+APP_NAME="Event Manager"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://training.test
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=192.168.56.56
-DB_PORT=3306
-DB_DATABASE=training-manager
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_HOST=mysql
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=event-manager
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -66,3 +64,10 @@ STRIPE_SECRET=
 STRIPE_WEBHOOK_SECRET=
 CASHIER_CURRENCY=gbp
 CASHIER_CURRENCY_LOCALE=en_GB
+
+CASHIER_PATH=
+STRIPE_WEBHOOK_TOLERANCE=
+CASHIER_PAYMENT_NOTIFICATION=
+CASHIER_INVOICE_RENDERER=
+CASHIER_PAPER=
+CASHIER_LOGGER=
