Prepare for continuous deployment

--- a/.env.example
+++ b/.env.example
@@ -65,9 +65,5 @@ STRIPE_WEBHOOK_SECRET=
 CASHIER_CURRENCY=gbp
 CASHIER_CURRENCY_LOCALE=en_GB
 
-CASHIER_PATH=
-STRIPE_WEBHOOK_TOLERANCE=
-CASHIER_PAYMENT_NOTIFICATION=
-CASHIER_INVOICE_RENDERER=
-CASHIER_PAPER=
-CASHIER_LOGGER=
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=
