--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy (Master)
+name: Deploy
 
 on:
   push:
@@ -10,23 +10,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to production
+      - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          script: |
-            cd /var/www/html
-            echo "Deploying application ..."
-            (php artisan down) || true
-              git fetch origin main
-              git reset --hard origin/main
-              composer install --no-interaction --prefer-dist --optimize-autoloader
-              php artisan migrate --force
-              npm install
-              npm run build
-              php artisan optimize
-            php artisan up
-            echo "Application deployed!"
+          script: cd /var/www/html && ./deploy.sh
